--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A.C輔助選台系統</title>
+    <title>ZM優化系統</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.min.js"></script>
@@ -119,7 +119,7 @@
 </script>
 <body class="body1">
     <video id="myVideo" class="video-background" muted loop playsinline>
-        <source src="include/raz.mp4" type="video/mp4">
+        <source src="include/raz2.mp4" type="video/mp4">
         <!-- 你可以再加個 webm 以相容更多瀏覽器 -->
         <!-- <source src="background.webm" type="video/webm"> -->
     </video>
@@ -482,7 +482,7 @@
                 $('#bng_game3').val($('#bng_game').val());
                 $('#tableInput3').val($('#tableInput').val());
 
-                $('body').removeClass('body1');
+                // $('body').removeClass('body1');
                 // $('body').addClass('body2');
                 $('#myVideo').get(0).play();
                 runLoadingBar();    
@@ -498,8 +498,8 @@
             $('#page3').show();
             $('#myVideo').hide();
 
-            $('body').addClass('body1');
-            $('body').removeClass('body2');
+            // $('body').addClass('body1');
+            // $('body').removeClass('body2');
         }
 
         function runLoadingBar() {
